# reservoir-lab

./: .gitignore  main.py  pyproject.toml
experiments/: exp01_baseline.py  exp01_baseline_narma.py  exp02_sine_generalization.py  exp03_mackey_glass.py  exp04_NARMA10.py  exp05_human_activity.py  exp06_memory_capacity.py  exp07_reservoir_seperation.py  exp08_physical_reservoirs.py  exp09_physical_reservoirs_benchmarks.py
src/reservoir_lab/: readout.py  reservoir.py  visualize.py
src/reservoir_lab/physical/: __init__.py  acoustic.py  base.py  hardware.py  optical.py
