[project]
name = "reservoircomputing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "reservoirpy>=0.4.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reservoir_lab"]